Fixed indentation and temporary patch to responsive JS team section

--- a/artyllect/static/sass/components/content/_team.scss
+++ b/artyllect/static/sass/components/content/_team.scss
@@ -1,3 +1,4 @@
+$teamMemberDimension: 12%;
 .team{
 	h2{width: 91.5%;}
 	.vertical-align{
@@ -12,9 +13,6 @@
 	}
 	
 	.back{margin-top: 10%;}
-
-
-	$teamMemberDimension: 12%;
 	.team-member{
 		display:inline-block;
 		width:$teamMemberDimension;
@@ -41,32 +39,30 @@
 			left: 14%;
 			&.adobe{background: url("../images/certified_expert.png") no-repeat scroll 0 50% transparent;}
 		}
-
-		
 	}
-
-	@media only screen and (max-width: 599px){
+}
+/*Mobile break point*/
+@media only screen and (max-width: 599px){
 	.team-member{
 		width:45%;
 		height:45%;
 		margin: 53px 53px;
 		font-size: 200px;
 	}
-	}
+}
 /*Small tablet break point*/
 @media only screen and (min-width: 600px) and (max-width: 767px){
-		.team-member{
+	.team-member{
 		width:25%;
 		height:25%;
 		margin:50px;
-		}
 	}
+}
 /*Big tablet break point*/
 @media only screen and (min-width: 768px) and (max-width: 999px){
-		.team-member{
+	.team-member{
 		width:15%;
 		height:15%;
 		margin: 50px;
-		}
-	}	
-}
+	}
+}	
