--- a/artyllect/static/sass/components/content/_team.scss
+++ b/artyllect/static/sass/components/content/_team.scss
@@ -11,7 +11,6 @@ $teamMemberDimension: 12%;
 		margin:0;
 		padding:0;
 	}
-	
 	.back{margin-top: 10%;}
 	.team-member{
 		display:inline-block;
@@ -41,28 +40,47 @@ $teamMemberDimension: 12%;
 		}
 	}
 }
+
 /*Mobile break point*/
 @media only screen and (max-width: 599px){
-	.team-member{
-		width:45%;
-		height:45%;
-		margin: 53px 53px;
-		font-size: 200px;
+	.team{
+		.card{border:4px solid #D3D3D3;}
+		.team-member{
+			width: 47.5%;
+			h3{font-size: 2.9vw;}
+			p{font-size: 2.4vw;}
+			img{width: 56.99%;}
+			margin-top:13px;
+			margin-bottom:13px;
+		}
+
 	}
 }
 /*Small tablet break point*/
 @media only screen and (min-width: 600px) and (max-width: 767px){
-	.team-member{
-		width:25%;
-		height:25%;
-		margin:50px;
-	}
+ 	.team{
+ 		.card{border:3px solid #D3D3D3;}
+ 		.team-member{
+ 			width:30%;
+ 			h3{font-size: 2.9vw;}
+			p{font-size: 2.4vw;}
+			img{width:57.5%;}
+			margin-top:40px;
+			margin-bottom:40px;
+ 		}
+ 	}	
 }
 /*Big tablet break point*/
 @media only screen and (min-width: 768px) and (max-width: 999px){
-	.team-member{
-		width:15%;
-		height:15%;
-		margin: 50px;
+	.team{
+		.card{border:2px solid #D3D3D3;}
+		.team-member{
+			width:20%;
+			h3{font-size:1.9vw;}
+			p{font-size:1.9vw;}
+			img{width:60%;}
+			margin-top:20px;
+			margin-bottom:20px;
+		}
 	}
-}	
+}
