--- a/artyllect/static/sass/components/content/_brands.scss
+++ b/artyllect/static/sass/components/content/_brands.scss
@@ -20,3 +20,36 @@
 		}
 	}
 }
+/*Mobile break point*/
+@media only screen and (max-width: 599px){
+	.brands{
+		.logo-client{
+			width: 30%;
+			img{width: 60%;}
+			margin-top:2px;
+			margin-bottom:2px;
+		}
+	}
+}
+/*Small tablet break point*/
+@media only screen and (min-width: 600px) and (max-width: 767px){
+	.brands{
+		.logo-client{
+			width: 25%;
+			img{width: 55%;}
+			margin-top:5px;
+			margin-bottom:5px;
+		}
+	}
+}
+/*Big tablet break point*/
+@media only screen and (min-width: 768px) and (max-width: 999px){
+	.brands{
+		.logo-client{
+			width: 20%;
+			img{width: 40%;}
+			margin-top:3px;
+			margin-bottom:3px;
+		}
+	}
+}
