Increased size icons for communities in mobile. Increased size global h2 in mobile. Minor tweaks for intro in mobile.

--- a/artyllect/static/sass/components/content/_brands.scss
+++ b/artyllect/static/sass/components/content/_brands.scss
@@ -22,7 +22,11 @@ $logoDimensions: 16%;
 /*Mobile break point*/
 @media only screen and (max-width: 599px){
 	.brands{
-		.vertical-align{transform:none;}
+		padding-top: 100px;
+		.vertical-align{
+			transform:none;
+			left:0;
+		}
 		.logo-client{
 			width: 30%;
 			margin-bottom:50px;
