--- a/artyllect/static/sass/components/content/_communities.scss
+++ b/artyllect/static/sass/components/content/_communities.scss
@@ -23,10 +23,15 @@
 /*Mobile break point*/
 @media only screen and (max-width: 599px){
 	.communities{
-		.social-icon{
-			width: 80%;
-			img{width: 80%;}
+		padding: 100px 0;
+		.vertical-align{
+			transform:none;
 		}
+		.social-icon{
+			width: 100%;
+			img{width: 100%;}
+		}
+		p{font-size:5vw;}
 	}
 }
 /*Small tablet break point*/
