--- a/artyllect/static/sass/components/content/_intro.scss
+++ b/artyllect/static/sass/components/content/_intro.scss
@@ -11,3 +11,15 @@
 		font-size: 2.6vw;
 	}
 }
+
+
+/*Mobile break point*/
+@media only screen and (max-width: 599px){
+	.intro{
+		p{
+			font-size: 5.6vw;
+    		width: 80%;
+    		margin: 0 auto;
+		}
+	}
+}
