--- a/artyllect/static/sass/components/content/_team.scss
+++ b/artyllect/static/sass/components/content/_team.scss
@@ -14,6 +14,7 @@ $teamMemberDimension: 12%;
 	.back{margin-top: 10%;}
 	.team-member{
 		display:inline-block;
+		vertical-align: top;
 		width:$teamMemberDimension;
 		position:relative;
 		margin-bottom: 0.5%;
@@ -44,13 +45,22 @@ $teamMemberDimension: 12%;
 /*Mobile break point*/
 @media only screen and (max-width: 599px){
 	.team{
+		padding-top: 100px;
 		.vertical-align{transform: none;}
 		.team-member{
 			margin-bottom: 60px;
 			height:auto;
 			width: 47.5%;
-			h3{font-size: 2.9vw;}
-			p{font-size: 2.4vw;}
+			h3{
+				font-size: 4vw;
+				line-height:1em;
+				margin-bottom:.3em;
+			}
+			p{
+				font-size: 4vw;
+				line-height:1em;
+				margin:0;
+			}
 			img{width: 56.99%;}
 		}
 	}
