--- a/artyllect/static/sass/components/global/_elements.scss
+++ b/artyllect/static/sass/components/global/_elements.scss
@@ -21,3 +21,10 @@ ul, li, li{
 .clear{
 	clear:both;
 }
+
+/*Mobile break point*/
+@media only screen and (max-width: 599px){
+	h2{
+		font-size:7vw;
+	}
+}
